--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "countries",
   "version": "0.1.0",
+  "homepage": "https://oriarot.github.io/Country-site",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -35,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
